# AgentComputerUse

./: .gitignore  .replit  API_DOCUMENTATION.md  Dockerfile  README.md  api.py  api_docs.py  app.py  browser_automation.py  cloudbuild.yaml  computer_use_agent.py  dashboard.py  docker-requirements.txt  enhanced_agent.py  install_playwright.py  mock_browser_automation.py  pyproject.toml  reasoning_capture.py  reasoning_helper.py  replit.nix  requirements.txt  session_manager.py  session_replay.py  setup_app.py  utils.py
.github/workflows/: gcp-deploy.yml
attached_assets/: Pasted--Docs-API-reference-Computer-use-Build-a-computer-using-agent-that-can-perform-tasks-on-your-behalf--1741720097609.txt  Pasted--Traceback-most-recent-call-last-File-Users-tola-Documents-Computer-Use-AgentComputerUse-env--1741757668277.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-replay-1741750320268.txt
sessions/: 3835f188-4f3d-4974-b439-f13bcb721dbc.json  b53cccb0-c642-4663-bc6a-0a658e6b3fb7.json  c94cfbd6-2e05-4c95-9d70-2148792c8bca.json  fca90560-85ec-4d71-8f35-f315467748b1.json
