[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.115.11",
    "matplotlib>=3.10.1",
    "openai>=1.66.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "playwright>=1.50.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "streamlit>=1.43.1",
    "uvicorn>=0.34.0",
]
